src/components/orgunits/styles/OrgUnitData.module.css
.orgUnitData {
    margin-top: var(--spacers-dp16);
}

.periodSelect label span {
    display: none;
}

.dataTable {
    position: relative;
}

.dataTable table {
    border-collapse: collapse;
    width: 100%;
    font-size: 14px;
}

.dataTable tr {
    border-bottom: 1px solid var(--colors-grey400);
}

.dataTable th {
    text-align: left;
    color: var(--colors-grey600);
    font-weight: normal;
    padding: 10px 8px 9px 0;
}

.dataTable td {
    text-align: right;
    padding: 10px 0 9px;
    white-space: nowrap;
}

.loadingMask {
    position: absolute;
    height: 100%;
    width: 100%;
    background-color: #fff;
    bottom: 0;
    left: 0;
    right: 0;
    top: 0;
    opacity: 0.7;
    display: flex;
    justify-content: center;
    align-items: center;
}

.loadingMask > div {
    opacity: 1;
}

.noData {
    font-style: italic;
    padding-top: var(--spacers-dp8);
    font-size: 14px;
    color: var(--colors-grey900);
}

